# BSRI-Test

./: LICENSE  README.md  cargo.toml
test_core/: Cargo.toml
test_core/src/: answers.rs  lib.rs  questions.rs
