[package]
name = "test_core"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

